[package]
name = "high-frequency"
version = "0.0.1"
edition = "2018"
authors = [
    "Cloud <cloudweisz@gmail.com>"
]
keywords = [
    "trade",
   "high-frequency",
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[dependencies]
tokio = { version = "1", features = ["full"] }
# bian-rs = { version = "0.2.0", path = "./bian-rs" }
bian-rs = { git = "https://github.com/kaiweicai/bian-rs.git",branch="main" }
dotenv = "0.15.0"
url = "2.3.1"
tungstenite = { git = "https://github.com/PrivateRookie/tungstenite-rs.git", branch = "proxy", version = "0.13" }
lazy_static="1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"